# gitops-maker

./: LICENSE  README.md  pyproject.toml
src/gitops_template/: main.py
src/gitops_template/cli/: generate.py  preview.py  validate.py
src/gitops_template/services/: generator.py  preview.py  validator.py
src/gitops_template/templates/terraform-aws/: cookiecutter.json
src/gitops_template/templates/terraform-aws/{{ cookiecutter.project_name }}/: .gitlab-ci.yml  .validate.yaml  README.md  atlantis.yaml
src/gitops_template/templates/terraform-aws/{{ cookiecutter.project_name }}/envs/dev/: main.tf
src/gitops_template/templates/terraform-aws/{{ cookiecutter.project_name }}/envs/prod/: main.tf
src/gitops_template/templates/terraform-aws/{{ cookiecutter.project_name }}/envs/staging/: main.tf
teste-aws/: .gitlab-ci.yml  README.md  atlantis.yaml
teste-aws/envs/dev/: main.tf
teste-aws/envs/prod/: main.tf
teste-aws/envs/staging/: main.tf
teste-aws/modules/: main.tf
