[tool.poetry]
name = "gitops-maker"
version = "0.1.0"
description = "🛠️ Scaffold Generator GitOps-Ready para ArgoCD, Helm, Terraform e Atlantis"
authors = ["Giovanni Gava <seu@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gitops_template", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
rich = "^13.7.1"
cookiecutter = "^2.6.0"
jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.4"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gitops_template = "gitops_template.main:main"
